# flutter_openim_ffi

./: .gitignore  CHANGELOG.md  LICENSE  README-zh.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
example/android/app/: build.gradle.kts
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_openim_ffi.podspec
lib/: flutter_openim_ffi.dart  openim_ffi_bindings_generated.dart
lib/src/: logger.dart  openim.dart  utils.dart
lib/src/enum/: allow_type.dart  conversation_type.dart  group_at_type.dart  group_member_filter.dart  group_role_level.dart  group_status.dart  group_type.dart  group_verification.dart  im_platform.dart  join_source.dart  listener_type.dart  login_status.dart  message_status.dart  message_type.dart  receive_message_opt.dart  relationship.dart  sdk_error_code.dart
lib/src/ffi/: bindings.dart  bindings_io.dart  bindings_stub.dart  event_bridge.dart  event_bridge_io.dart  event_bridge_stub.dart  native_bridge.dart  native_bridge_io.dart  native_bridge_stub.dart
lib/src/listener/: advanced_msg_listener.dart  connect_listener.dart  conversation_listener.dart  custom_business_listener.dart  friendship_listener.dart  group_listener.dart  listener_for_service.dart  msg_send_progress_listener.dart  upload_file_listener.dart  (+1 more)
linux/: CMakeLists.txt
macos/: flutter_openim_ffi.podspec
macos/Classes/: flutter_openim_ffi.c
src/: CMakeLists.txt  flutter_openim_ffi.c  flutter_openim_ffi.h  libopenim_sdk_ffi_ios.h  openim_ffi.c  openim_ffi.h  openim_sdk_ffi.h  openim_sdk_ffi_android.h  openim_sdk_ffi_apple.h  openim_sdk_ffi_windows.h
windows/: CMakeLists.txt
(+24 files in other folders)
